--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <div class="container">
+      <div id="game-container"></div>
+    </div>
     <script src="build/project.bundle.js" charset="utf-8"></script>
   </body>
 </html>
