Added score board

--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="container">
-      <div id="game-container"></div>
+    <div class="game-container">
+      <div class="title-cont">
+        <h1>Soldier in the Space</h1>
+      </div>
+      <div class="game-cont"id="game-container"></div>
+      <div class="scoreboard-cont">
+        <div class="score-box">
+          <table border="4">
+            <tr><th>Player</th><th>Score</th></tr>
+            <tr><td>Mr.Dev</td><td>3820</td></tr>
+            <tr><td>Alisson</td><td>1820</td></tr>
+            <tr><td>Daniella</td><td>1080</td></tr>
+            <tr><td>Gorda Peres</td><td>1040</td></tr>
+          </table>
+        </div>
+        <div class="score-box">
+          <table border="4">
+            <tr><th>Player</th><th>Score</th></tr>
+            <tr><td>Mr.Dev</td><td>3820</td></tr>
+            <tr><td>Alisson</td><td>1820</td></tr>
+            <tr><td>Daniella</td><td>1080</td></tr>
+            <tr><td>Gorda Peres</td><td>1040</td></tr>
+          </table>
+        </div>
+        <div class="score-box">
+          <table border="4">
+            <tr><th>Player</th><th>Score</th></tr>
+            <tr><td>Mr.Dev</td><td>3820</td></tr>
+            <tr><td>Alisson</td><td>1820</td></tr>
+            <tr><td>Daniella</td><td>1080</td></tr>
+            <tr><td>Gorda Peres</td><td>1040</td></tr>
+          </table>
+        </div>
+        <div class="score-box">
+          
+        </div>
+      </div>
     </div>
     <script src="build/project.bundle.js" charset="utf-8"></script>
   </body>
