Saving moc scores into leaderborad

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
         </div>
       </div>
     </div>
+    <div class="form-container">
+      <div class="form-b-1"></div>
+      <div class="form-b-2">
+        <input type="text" name="name" placeholder="Player Name" required>
+        <input type="text" name="score" placeholder="Score" required>
+        <button type="button" name="Set" id="save-data">Save</button>
+        <button type="button" name="Get" id="get-data">Get</button>
+      </div>
+    </div>
     <script src="build/project.bundle.js" charset="utf-8"></script>
   </body>
 </html>
