--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
       <div class="scoreboard-cont">
         <div class="score-box">
           <table border="4">
-            <tr><th>Player</th><th>Score</th></tr>
-            <tr><td>Mr.Dev</td><td>3820</td></tr>
-            <tr><td>Alisson</td><td>1820</td></tr>
-            <tr><td>Daniella</td><td>1080</td></tr>
-            <tr><td>Gorda Peres</td><td>1040</td></tr>
+            <tr><th>Pos</th><th>Player</th><th>Score</th></tr>
+            <tr><th>1</th><td>Mr.Dev</td><td>3820</td></tr>
+            <tr><th>2</th><td>Alisson</td><td>1820</td></tr>
+            <tr><th>3</th><td>Daniella</td><td>1080</td></tr>
+            <tr><th>4</th><td>Gorda Peres</td><td>1040</td></tr>
+          </table>
+        </div>
+        <div id="tab-2" class="score-box">
+          <table border="4">
+            <tr><th>Pos</th><th>Player</th><th>Score</th></tr>
+            <tr><th>5</th><td>Mr.Dev</td><td>3820</td></tr>
+            <tr><th>6</th><td>Alisson</td><td>1820</td></tr>
+            <tr><th>7</th><td>Daniella</td><td>1080</td></tr>
+            <tr><th>8</th><td>Gorda Peres</td><td>1040</td></tr>
           </table>
         </div>
         <div class="score-box">
           <table border="4">
-            <tr><th>Player</th><th>Score</th></tr>
-            <tr><td>Mr.Dev</td><td>3820</td></tr>
-            <tr><td>Alisson</td><td>1820</td></tr>
-            <tr><td>Daniella</td><td>1080</td></tr>
-            <tr><td>Gorda Peres</td><td>1040</td></tr>
-          </table>
-        </div>
-        <div class="score-box">
-          <table border="4">
-            <tr><th>Player</th><th>Score</th></tr>
-            <tr><td>Mr.Dev</td><td>3820</td></tr>
-            <tr><td>Alisson</td><td>1820</td></tr>
-            <tr><td>Daniella</td><td>1080</td></tr>
-            <tr><td>Gorda Peres</td><td>1040</td></tr>
+            <tr><th>Pos</th><th>Player</th><th>Score</th></tr>
+            <tr><th>9</th><td>Mr.Dev</td><td>3820</td></tr>
+            <tr><th>10</th><td>Alisson</td><td>1820</td></tr>
+            <tr><th>11</th><td>Daniella</td><td>1080</td></tr>
+            <tr><th>12</th><td>Gorda Peres</td><td>1040</td></tr>
           </table>
         </div>
         <div class="score-box">
@@ -45,8 +45,8 @@
     <div class="form-container">
       <div class="form-b-1"></div>
       <div class="form-b-2">
-        <input type="text" name="name" placeholder="Player Name" required>
-        <input type="text" name="score" placeholder="Score" required>
+        <input type="text" name="name" id="player-name" placeholder="Player Name" required>
+        <input type="text" name="score" id="player-score" placeholder="Score" required>
         <button type="button" name="Set" id="save-data">Save</button>
         <button type="button" name="Get" id="get-data">Get</button>
       </div>
