--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="game-container">
+    <div class="game-container" id="game-container">
       <div class="title-cont">
         <h1>Soldier in the Space</h1>
       </div>
@@ -25,18 +25,9 @@
             <tr><th>Pos</th><th>Player</th><th>Score</th></tr>
           </table>
         </div>
-        <div class="score-box"></div>
       </div>
     </div>
-    <div class="form-container">
-      <div class="form-b-1">
-        <input type="text" name="name" id="player-name" placeholder="Player Name" required>
-        <input type="text" name="score" id="player-score" placeholder="Score" required>
-        <button type="button" name="Set" id="save-data">Save</button>
-        <button type="button" name="Get" id="get-data">Get</button>
-      </div>
-      <div class="form-b-2">
-      </div>
+    <div class="form-container" id="user-input">
     </div>
     <script src="build/project.bundle.js" charset="utf-8"></script>
   </body>
