Fixing some styling details

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <div class="title-cont">
         <h1>Soldier in the Space</h1>
       </div>
-      <div class="game-cont"id="game-container"></div>
+      <div class="game-cont"id="game-boxing"></div>
       <div class="scoreboard-cont">
         <div class="score-box">
           <table class="score-table" border="4">
